--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-tensorflow",
   "description": "Node-tensorflow is a NodeJS API for utilizing Google's machine learning library TensorFlow.",
   "version": "0.0.1",
+  "main": "index.js",
   "keywords": [
     "tensorflow",
     "node-tensorflow"
@@ -15,6 +16,10 @@
       "url": "https://github.com/node-tensorflow/node-tensorflow.git"
     }
   ],
+  "dependencies": {
+    "bindings": "^1.2.1",
+    "nan": "^2.1.0"
+  },
   "licenses": [
     {
       "name": "Apache License 2.0",
