--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   ],
   "devDependencies": {
     "pkg-config": "^1.1.0"
+  },
+  "scripts": {
+    "install": "./tools/install.sh && node-gyp rebuild"
   }
 }
