Starting work on a build that uses git submodules
Rather than curling dependencies, this allows us to pin to a version
and therefore build reliably.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pkg-config": "^1.1.0"
   },
   "scripts": {
-    "install": "./tools/install.sh && node-gyp rebuild"
+    "_preinstall": "git submodule update --init --recursive && ./tools/build.sh",
+    "install": "node-gyp rebuild"
   }
 }
