--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/tensorflow"]
 	path = lib/tensorflow
-	url = git@github.com:tensorflow/tensorflow.git
+	url = https://github.com/tensorflow/tensorflow.git
