--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,36 @@ sudo: false
 node_js:
   - '4.1'
 
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.8
+      - g++-4.8
+      - wget
+      # Package list from http://bazel.io/docs/install.html
+      - openjdk-7-jdk
+      - openjdk-7-source
+      - pkg-config
+      - zip
+      - zlib1g-dev
+
+before_install:
+  # BAZEL
+  # Based on https://github.com/korfuri/bazel-travis
+  - wget 'https://github.com/bazelbuild/bazel/releases/download/0.1.0/bazel-0.1.0-installer-linux-x86_64.sh'
+  - sha256sum -c tools/bazel-0.1.0-installer-linux-x86_64.sh.sha256
+  - chmod +x bazel-0.1.0-installer-linux-x86_64.sh
+  - ./bazel-0.1.0-installer-linux-x86_64.sh --user
+  - cat ~/.bazelrc >> .bazelrc
+
+  #NUMPY
+  - wget http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda install --yes numpy=1.8
+
 compiler: clang
 
 install:
