--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,11 @@ addons:
       - zlib1g-dev
 
 before_install:
-  export JAVA_HOME=/usr/lib/jvm/java-8-oracle
-  cat > .bazelrc <<EOF
-  startup --host_jvm_args=-Xmx2500m
-  startup --host_jvm_args=-Xms2500m"
-  test --ram_utilization_factor=10
-  EOF
-  export BAZELRC="$(pwd)/.bazelrc"
+  - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
+  - echo "startup --host_jvm_args=-Xmx2500m" >> .bazelrc
+  - echo "startup --host_jvm_args=-Xms2500m" >> .bazelrc
+  - echo "test --ram_utilization_factor=10" >> .bazelrc
+  - export BAZELRC="$(pwd)/.bazelrc"
 
   # BAZEL
   # Based on https://github.com/korfuri/bazel-travis
