--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ addons:
       - pkg-config
       - zip
       - zlib1g-dev
+      - python-numpy
 
 before_install:
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
@@ -40,12 +41,6 @@ before_install:
   - chmod +x bazel-0.1.4-installer-linux-x86_64.sh
   - ./bazel-0.1.4-installer-linux-x86_64.sh --user
   - cat ~/.bazelrc >> .bazelrc
-
-  #NUMPY
-  - wget http://repo.continuum.io/miniconda/Miniconda-3.8.3-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - export PATH=/home/travis/miniconda/bin:$PATH
-  - conda install --yes numpy=1.8
 
 compiler: clang
 
