--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ addons:
     packages:
       - gcc-4.8
       - g++-4.8
+      - clang
       - wget
       - oracle-java8-installer
       - pkg-config
@@ -29,6 +30,8 @@ addons:
       - python-numpy
 
 before_install:
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
   - echo "startup --host_jvm_args=-Xmx2500m" >> .bazelrc
   - echo "startup --host_jvm_args=-Xms2500m" >> .bazelrc
