More screwing around with compilers... :(

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,10 @@ addons:
 
 before_install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-  - g++ --version
+  - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.6"; fi
+
+  - $CXX --version
+  - export CXXFLAGS="-std=c++0x -stdlib=libc++"
 
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
   - echo "startup --host_jvm_args=-Xmx2500m" >> .bazelrc
