--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,9 @@ before_install:
   - $CXX --version
   - export CXXFLAGS="-std=c++0x -stdlib=libc++"
 
+  - #https://github.com/bazelbuild/bazel/issues/649, https://github.com/tensorflow/tensorflow/issues/336 FML
+  - sudo mv $(which $CXX) /usr/bin/gcc
+
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
   - echo "startup --host_jvm_args=-Xmx2500m" >> .bazelrc
   - echo "startup --host_jvm_args=-Xms2500m" >> .bazelrc
