--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,7 @@ before_install:
   - echo "startup --host_jvm_args=-Xms2500m" >> .bazelrc
   - echo "test --ram_utilization_factor=10" >> .bazelrc
   - echo "startup --batch" >> .bazelrc
-  - echo "build --spawn_strategy=standalone --genrule_strategy=standalone" >> .bazelrc
-  - echo "build --jobs" >> .bazelrc
-  - echo "build --local_resources 2048,.5,1.0" >> .bazelrc
+  - echo "build --spawn_strategy=standalone --genrule_strategy=standalone --jobs 10 --local_resources 2048,.5,1.0" >> .bazelrc
   - export BAZELRC="$(pwd)/.bazelrc"
 
   # BAZEL
