--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,15 @@ addons:
       - python-numpy
 
 before_install:
-  - sudo apt-get install g++-4.9
+  - sudo apt-get install gcc-4.9 g++-4.9 cpp-4.9
   # Bazel hardcodes /usr/bin/gcc by default :s
   # https://github.com/bazelbuild/bazel/issues/649, https://github.com/tensorflow/tensorflow/issues/336 FML
   - sudo rm /usr/bin/gcc
-  - sudo ln -s /usr/bin/g++-4.9 /usr/bin/gcc
+  - sudo rm /usr/bin/g++
+  - sudo rm /usr/bin/cpp
+  - sudo ln -s /usr/bin/gcc-4.9 /usr/bin/gcc
+  - sudo ln -s /usr/bin/g++-4.9 /usr/bin/g++
+  - sudo ln -s /usr/bin/cpp-4.9 /usr/bin/cpp
   - /usr/bin/gcc --version
 
   - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
@@ -50,10 +54,6 @@ before_install:
   - chmod +x bazel-0.1.4-installer-linux-x86_64.sh
   - ./bazel-0.1.4-installer-linux-x86_64.sh --user
   - cat ~/.bazelrc >> .bazelrc
-
-
-
-compiler: clang
 
 install:
   - npm run _preinstall
